39.0.1 (20-10-2022)
- Refactor: Remove AnyCurricularCourse rule legacy deprecated slots 

39.0.0 (19-10-2022)
- Refactor: Remove unused struts actions and related services
- Refactor: Remove uneessary intermediate class SpaceOccupation

38.0.0 (17-10-2022)
- Improvement: Add enrolmentInstructions slot to degree curricular plan
- Refactor: Remove deprecated degree curricular plan members group slot 
- Refactor: Cleanup party contacts validations
- Refactor: Remove legacy services and filters
- Refactor: Remove legacy dtos

37.0.0 (13-10-2022)
- Refactor: Remove legacy Struts functionalities

36.1.0 (10-10-2022)
- Refactor: Remove persistent relation between EvaluationSeason and OccupationPeriodReference
- Refactor: Remove deprecated OccupationPeriodType values and management UI

36.0.0 (06-10-2022)
- Refactor: Remove persistent relation between CourseLoad and LessonInstance
- Refactor: Remove deprecated enum CompetenceCourseLevel

35.0.1 (03-10-2022)
- Bug Fix: On statute types find, end date should be inclusive

35.0.0 (03-10-2022)
- Refactor: Remove legacy JSF functionalities and framework

34.4.1 (28-09-2022)
- Refactor: Add Curriculum API method to get unrounded grade
- Refactor: Remove getWeigthedGradeSum deprecated method from curriculum calculator

34.4.0 (27-09-2022)
- Improvement: Add AnyCurricularCourse new filters (negation, degree types, degrees, units, competence course levels and competence courses)
- Improvement: Add OR rule support for prefilter (only return true if any of child rules evalutes to NA)
- Improvement: Add AnyCurricularCourseExceptions prefilter support

34.3.3 (23-09-2022)
- Refactor: Declare default method IAcademicTreasuryTarget::getEventTargetCurrentState to retrieve to current state of the process associated with treasury event

34.3.2 (20-09-2022)
- Improvement: Allow deletion of execution course with messaging groups created

34.3.1 (16-09-2022)
- Refactor: Add method removeGrade to EnrolmentEvaluation

34.3.0 (01-09-2022)