@@ -106,10 +106,6 @@ abstract public class CurriculumModule extends CurriculumModule_Base {
         return false;
     }
 
-    public BranchCurriculumGroup getParentBranchCurriculumGroup() {
-        return getCurriculumGroup() != null ? getCurriculumGroup().getParentBranchCurriculumGroup() : null;
-    }
-
     public boolean isBranchCurriculumGroup() {
         return false;
     }
